--- a/src/App.css
+++ b/src/App.css
@@ -389,3 +389,26 @@ h1, h4 {
 .form-submit-button:active {
   background-image: var(--gradient-blue);
 }
+
+.inner-circle {
+    top: 38px;
+    height: 44px;
+    width: 44px;
+    background: #fff;
+    margin: -22px 0 0 -22px;
+    z-index: 2;
+    position: absolute;
+    border-radius: 50%;
+    border: none;
+}
+
+.outer-circle {
+  position: absolute;
+  border-radius: 50%;
+  height: 75px;
+  width: 75px;
+  background-color: hsla(0,0%,100%,.4);
+  z-index: 1;
+  border: none;
+  margin-top:25em;
+}
